fix clipped viewer title

--- a/app/assets/stylesheets/local/chf_image_viewer.scss
+++ b/app/assets/stylesheets/local/chf_image_viewer.scss
@@ -98,7 +98,7 @@ $chf_image_viewer_thumb_width: 60px; // Needs to match MemberHelper::VIEWER_THUM
       margin: 0 15px;
 
       font-size: $font-size-h3;
-
+      line-height: normal;
       overflow: hidden;
 
       a {
